<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_onbackground"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_bar_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_container_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimens"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintBottom_toBottomOf="@id/app_bar_container"
        app:layout_constraintEnd_toEndOf="@id/app_bar_container"
        app:layout_constraintStart_toStartOf="@id/app_bar_container"
        app:layout_constraintTop_toTopOf="@id/app_bar_container" />

    <ImageView
        android:id="@+id/ic_back"
        style="@style/IconsStyle"
        android:contentDescription="@null"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="@id/app_bar_container"
        app:layout_constraintTop_toTopOf="@id/app_bar_container" />

    <ImageView
        android:id="@+id/ic_more_vert"
        style="@style/IconsStyle"
        android:contentDescription="@null"
        android:src="@drawable/ic_setting"
        app:layout_constraintEnd_toEndOf="@id/app_bar_container"
        app:layout_constraintTop_toTopOf="@id/app_bar_container" />

    <ImageView
        android:id="@+id/ic_search"
        style="@style/IconsStyle"
        android:contentDescription="@null"
        android:src="@drawable/ic_search"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ic_more_vert"
        app:layout_constraintEnd_toStartOf="@+id/ic_more_vert"
        app:layout_constraintTop_toTopOf="@+id/ic_more_vert" />

    <ImageView
        android:id="@+id/ic_qr_code"
        style="@style/IconsStyle"
        android:contentDescription="@null"
        android:src="@drawable/ic_qr_code"
        app:layout_constraintBottom_toBottomOf="@+id/ic_search"
        app:layout_constraintEnd_toStartOf="@+id/ic_search"
        app:layout_constraintTop_toTopOf="@+id/ic_search" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dimens"
        android:layout_marginStart="@dimen/margin_16"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/profile_name"
        android:textColor="@color/light_onprimary"
        android:textSize="@dimen/font_28"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/profile_status"
        app:layout_constraintStart_toStartOf="@id/app_bar_container" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dimens"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/profile_status"
        android:textColor="@color/light_surface"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toBottomOf="@id/app_bar_container"
        app:layout_constraintStart_toStartOf="@id/profile_name" />





    <LinearLayout
        android:id="@+id/body_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_container">

        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/TextTitleStyle"
                android:text="@string/account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:orientation="vertical">

                <TextView
                    style="@style/TextSubtitleStyle"
                    android:text="@string/phone_number" />

                <TextView
                    style="@style/TextHintStyle"
                    android:text="@string/phone_number_desc" />

                <com.google.android.material.divider.MaterialDivider style="@style/dividerStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextSubtitleStyle"
                        android:text="@string/username" />

                    <TextView
                        style="@style/TextHintStyle"
                        android:text="@string/username_desc" />

                    <com.google.android.material.divider.MaterialDivider style="@style/dividerStyle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextSubtitleStyle"
                            android:text="@string/bio" />

                        <TextView
                            style="@style/TextHintStyle"
                            android:text="@string/bio_desc" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>